--- a/blog9.html
+++ b/blog9.html
@@ -85,20 +85,21 @@
     <div class="container-fluid pt-5 bg-primary hero-header">
         <div class="container pt-5">
             <div class="row g-5 pt-5">
-                <div class="col-lg-10 align-self-center text-center text-lg-start mb-lg-5">
-                    <div class="btn btn-sm border rounded-pill text-white px-3 mb-3">About</div>
-                    <h1 class="display-4 text-white mb-4 animated slideInRight">ImmunoRaptor Platform
+                <div class="col-lg-12 align-self-center text-center  mb-lg-5">
+                    <div class="btn btn-sm border rounded-pill text-white px-3 mb-3">BLOG</div>
+                    <h1 class="display-4 text-white mb-4 animated slideInRight">
+                        Modular AI: Enhancing Efficiency <br> and Impact in Life Sciences
                     </h1>
-                    <p class="text-white">Efficiently analyze and maximize the potential of your immune repertoire
-                        sequencing data.
-                    </p>
+                    <hr class="text-white mt-4 w-100" style="height: 4px;">
+                    <!-- <p class="text-white">Stay updated on all the latest events, webinars, and conferences where XANA will be making waves in life sciences.
+                     </p> -->
 
                     <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-center justify-content-lg-start mb-0">
+                        <ol class="breadcrumb justify-content-center mb-3">
                             <li class="breadcrumb-item"><a class="text-white" href="./index.html">Home</a></li>
                             <li class="breadcrumb-item text-white" aria-current="page">Platforms
                             </li>
-                            <li class="breadcrumb-item text-white" aria-current="page">ImmunoRaptor Platform
+                            <li class="breadcrumb-item text-white" aria-current="page">Blog
                             </li>
 
                             </li>
@@ -111,154 +112,161 @@
     </div>
     <!-- Hero End -->
 
-
-    <!--ImmunoRaptor Platform section start-->
+    <!--blog start-->
 
     <div class="container-fluid pt-5">
         <div class="row justify-content-center">
-            <div class="col-md-10 text-center pt-5 py-5 rounded" style="background-color: rgb(235, 235, 235)">
-                <h1 style="color: rgb(51, 51, 51);">ImmunoRaptor – Immune Repertoire Analysis Software</h1>
-                <p class="text-center pt-2 py-2 p-5">Over the past few years, it has become easier to study immune
-                    responses
-                    through adaptive immune receptor repertoire sequencing (AIRR-Seq), in which DNA from B-cell or
-                    T-cell receptors is sequenced. However, there is a lack of easy-to-use, efficient, and accurate
-                    tools for analyzing these data.</p>
-                <p class="text-center pt-2 py-2 p-5">Therefore, Excelra has developed ImmunoRaptor, a highly innovative
-                    immune repertoire analysis
-                    software that enables researchers to easily manage and analyze their immune repertoire sequencing
-                    data. Its wide range of features ensures that ImmunoRaptor can be applied in diverse domains such as
-                    antibody discovery, autoimmune diseases, vaccine development, and oncology. ImmunoRaptor has an
-                    easy-to-use interface and does not require bioinformatics expertise. By relying on cloud computing,
-                    hundreds of samples can be quickly analyzed simultaneously.</p>
-                <h5 class="pt-1" style="color: rgb(71, 71, 71);">Would you like to try out ImmunoRaptor for your immune
-                    repertoire sequencing data?</h5>
-                <button type="button" class="mt-4 rounded-pill btn-lg border-primary">CONTACT US</button>
+            <div class="col-md-9 mt-4">
+                <p><b class="text-dark">Contributors :</b> Viswanath Chidambaram and Sneha SR <br><br>
+                    The life sciences industry is rapidly growing in various ways. Artificial
+                    Intelligence (AI) is becoming very important for every company in this field, as it helps to
+                    create better products and speed up research at lower costs. AI integration is crucial, but it
+                    can also be a challenging and intimidating process. Implementing AI as a modular element allows
+                    organizations to access its benefits without making major changes to their existing systems.
+                    This article focuses on implementing modular AI with existing data pipelines and backend
+                    systems. Overall, this approach boosts the impact of the products at a lower cost.
+                </p>
+                <h2 class="pt-3" style="color: rgb(70, 70, 70);">AI as a Component in Existing Architectures</h2>
+                <p class="pt-2">Modular AI integration is the best approach to start using AI within the existing
+                    infrastructure of a life sciences organization. Through this approach, researchers and healthcare
+                    institutions can incorporate the latest AI functions into their existing systems without the need
+                    for expensive solutions to be built from scratch. Organizations can accomplish effective measures
+                    like improved efficiency and superior governance, all while being frugal with finances. This
+                    approach would also be helpful to the system planners in making better decisions.</p>
+
+                <h2 class="pt-3" style="color: rgb(70, 70, 70);">Enhancing Data Pipelines with AI</h2>
+                <p class="pt-2">Modular AI serves practical uses in life sciences, particularly in data pipelines. It
+                    also acts as the core for processing and analysing 1research and development data. Through embedding
+                    AI into these pipelines, we can massively improve their productivity and effectiveness. For example,
+                    AI tools can automate chores like cleansing data, spotting oddities, and making forecasts, ensuring
+                    that the data from the pipelines is precise, useful, and actionable. Consequently, research and
+                    clinical decisions are more well-informed and reasoned. It also helps in saving money and time, as
+                    well as improving the quality of data.</p>
+
+                <h2 class="pt-3" style="color: rgb(70, 70, 70);">AI as a Microservice for Backend Enhancements</h2>
+                <p class="pt-2">Another powerful application of modular AI in life sciences is its deployment as a
+                    microservice. AI as a microservice used in life sciences organizations allows the addition of
+                    sophisticated AI capabilities to backends that already exist, thus, improving the entire
+                    functionality and impact of their applications. For instance, AI-powered microservices can carry out
+                    tasks like natural language processing for literature reviews, image recognition for medical imaging
+                    analysis, and recommendation systems for personalized treatment plans, thus enriching the research
+                    and clinical experience and providing value-added features that set the application apart from
+                    competitors.</p>
+
+                <h2 class="pt-3" style="color: rgb(70, 70, 70);">Benefits of Modular AI</h2>
+                <p class="pt-2">Starting with a small, incremental implementation of AI can minimize disruption and help
+                    ensure the technology fits seamlessly into existing processes. By gradually incorporating all
+                    necessary modules over time, organizations can effectively manage adoption challenges and optimize
+                    system performance.
+                    Controlling costs is a crucial aspect of AI integration, and this modular approach allows
+                    organizations to allocate resources based on immediate needs and ROI, scaling up as necessary
+                    without incurring unnecessary expenses.
+
+                <h2 class="pt-3" style="color: rgb(70, 70, 70);">Conclusion</h2>
+                <p class="pt-2">The concept of modular AI presents a compelling case for businesses aiming to innovate
+                    and stay competitive in the digital age. By integrating AI into existing architectures, enhancing
+                    data pipelines, and deploying AI as microservices, organizations can achieve significant benefits at
+                    a reduced cost. The flexibility and scalability offered by modular AI ensure that companies can
+                    adapt and evolve their AI capabilities as needed, paving the way for sustained growth and success.
+                    Incorporating AI as a modular component is not just a cost-effective strategy but also a
+                    forward-thinking approach that positions businesses to harness the full potential of AI technology.
+                    As we continue to advance into an increasingly AI-driven future, the ability to seamlessly integrate
+                    AI into existing systems will be a key determinant of success for organizations across all
+                    industries.</p>
             </div>
         </div>
     </div>
 
-    <!--ImmunoRaptor Platform section end-->
-
-    <!--immune repertoire start-->
-
-    <div class="container pt-5">
-        <div class="row">
-            <h2 style="color: rgb(51, 51, 51);" class="mt-4 fs-1">6 easy steps to fully benefit from your immune
-                repertoire <br> sequencing data</h2>
-            <div>
-                <hr class="text-primary w-25">
-            </div>
-            <div class="col-md-6">
-                <ul class="fw-bold" style="list-style: none;">
-                    <li class="pt-4">Upload your sample data</li>
-                    <li class="pt-4">Create a new experiment</li>
-                    <li class="pt-4">Run the experiment</li>
-                </ul>
-            </div>
-            <div class="col-md-6">
-                <ul class="fw-bold" style="list-style: none;">
-                    <li class="pt-4">Download the results</li>
-                    <li class="pt-4">Explore the data through interactive visualizations</li>
-                    <li class="pt-4">Share the results with your colleagues</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <img src="./img/sample-browser.webp" alt="" class="img-fluid pt-2">
-                <p class="mt-3">Data management: Simply upload samples and supporting files.</p>
-
-            </div>
-            <div class="col-md-6">
-                <img src="./img/experiments.webp" alt="" class="img-fluid pt-2">
-                <p class="mt-3">Experiment overview: Create and track experiments efficiently.</p>
-
-            </div>
-        </div>
+    <!--blog end -->
 
 
-        <div class="row">
-            <div class="col-md-6">
-                <img src="./img/file-browser.png" alt="" class="img-fluid pt-2">
-                <p class="mt-lg-5 py-5">Sample browser: Create interactive visualizations for samples of interest.</p>
-            </div>
-            <div class="col-md-6">
-                <img src="./img/visualization-CDRH3-overlap.webp" alt="" class="img-fluid pt-2">
-                <p class="mt-2">Visualization example: CDRH3 overlap. Arcs indicate samples with shared
-                    CDRs.</p>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-6">
-                <img src="./img/repertoire-overlap.webp" alt="" class="img-fluid pt-2">
-                <p class="mt-lg-5 ">Visualization example: shared clonotypes per sample.</p>
+    <!--goster start-->
+
+    <div class="container-fulid my-5" style="background-color: rgb(255, 239, 241);">
+        <div class="row justify-content-center">
+            <div class="col-md-5 py-7">
+                <p class="fs-3  p-5 "><b class="">
+                        Contact us today to discuss how our Scientific Informatics Services can empower your drug
+                        discovery journey.
+                    </b></p>
             </div>
-            <div class="col-md-6">
-                <img src="./img/visualizations-greiff-2014 (1).webp" alt="" class="img-fluid pt-2">
-                <p class="p-4">Visualization example: Stack columns show the composition of amino acids.</p>
+            <div class="col-md-3 position-relative mx-3 mb-4">
+                <div class=" text-center position-absolute top-50 start-50 translate-middle">
+                    <a href="mailto:xanabioinformatics@gmail.com"
+                        class="btn border border-dark btn-lg rounded-pill px-5">Email</a>
+                </div><br><br>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid mt-5 mb-5">
-        <h2 class="" style="color: rgb(73, 73, 73);">
-            <div class="row justify-content-center">
-                <div class="col-md-5 mx-2 rounded" style="background-color: rgb(253, 231, 235);">
-                    <h3 class="pt-4 px-4" style="color: rgb(70, 70, 70);">Benefits of ImmunoRaptor</h3>
-                    <ul class="fw-bold fs-5" style="list-style: none;">
-                        <li class="mt-4">No bioinformatics expertise required</li>
-                        <li class="mt-4">Interactive visualizations</li>
-                        <li class="mt-4">Support for all common protocols (Illumina, UMI, 10x)</li>
-                        <li class="mt-4">High-throughput data processing</li>
-                        <li class="mt-4">Data security</li>
-                        <li class="mt-4 mb-5">Standardized according to AIRR community guidelines</li>
-                    </ul>
-                </div><br>
-                <div class="col-md-5 mx-3 rounded" style="background-color: rgb(233, 250, 255);">
-                    <h3 class="pt-4 px-4" style="color: rgb(70, 70, 70);">ImmunoRaptor features</h3>
-                    <ul class=" fs-6 mt-3 lh-lg">
-                        <li>Support for all common input data types such as BCR/TCR data from Illumina or 10X</li>
-                        <li>Assignment of clones/clonotypes/lineages</li>
-                        <li>Reconstruction of phylogenetic trees</li>
-                        <li>Analysis of CDR properties (e.g. amino acids, lengths, physicochemical properties)</li>
-                        <li>Analysis of somatic hypermutation rates</li>
-                        <li>Analysis of gene usage and V-J recombination</li>
-                        <li>Excelra global support</li>
+    <!--goster end -->
 
-                    </ul>
-                </div>
+
+
+
+    <!--crads start-->
+
+
+    <div class="container-fluid py-5 mb-5" style="background-color: rgb(240, 249, 255);">
+        <div class="row justify-content-center">
+            <div class="col-md-9">
+                <h2 class="" style="color: rgb(77, 77, 77);">Recommended For You</h2>
             </div>
-    </div>
-
-
-
-
-    <!-- Full Screen Search Start -->
-    <div class="modal fade" id="searchModal" tabindex="-1">
-        <div class="modal-dialog modal-fullscreen">
-            <div class="modal-content" style="background: rgba(20, 24, 62, 0.7);">
-                <div class="modal-header border-0">
-                    <button type="button" class="btn btn-square bg-white btn-close" data-bs-dismiss="modal"
-                        aria-label="Close"></button>
-                </div>
-                <div class="modal-body d-flex align-items-center justify-content-center">
-                    <div class="input-group" style="max-width: 600px;">
-                        <input type="text" class="form-control bg-transparent border-light p-3"
-                            placeholder="Type search keyword">
-                        <button class="btn btn-light px-4"><i class="bi bi-search"></i></button>
+        </div>
+        <div class="row justify-content-center gap-4">
+            <div class="col-md-3">
+                <div class="card mt-lg-5 ">
+                    <div class="card-body">
+                        <h5 class="card-title fs-3"> 10x Visium: A breakthrough enabling Omics analysis at spatial level
+                        </h5>
+                        <p class="card-text mt-3 mb-5 fs-6"> The constantly evolving landscape of laboratory informatics
+                            has made it crucial for life sciences organizations…</p>
                     </div>
                 </div>
+
+            </div>
+
+
+
+
+            <div class="col-md-3">
+                <div class="card mt-lg-5 ">
+                    <div class="card-body">
+                        <h5 class="card-title fs-3"> Omics Data: A Biomedical Asset Driving The Future Of Drug Discovery
+                            And Development
+                        </h5>
+                        <p class="card-text mt-3 mb-5 fs-6"> Effective target identification lies at the core of drug
+                            discovery. In theory, it sounds simple…
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+
+            <div class="col-md-3">
+                <div class="card mt-lg-5 ">
+                    <div class="card-body">
+                        <h5 class="card-title fs-3">
+                            Transforming Unstructured Data into Actionable Insights Using AI</h5>
+                        <p class="card-text mt-3 mb-5 fs-6"> Effective target identification lies at the core of drug
+                            discovery. In theory, it sounds simple…</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
-    <!-- Full Screen Search End -->
 
 
 
 
+
+
+    <!--cards end-->
 
 
     <!-- Footer Start -->
@@ -269,8 +277,10 @@
                     <a href="index.html" class="d-inline-block mb-3">
                         <h1 class="text-white">AI<span class="text-primary">.</span>Tech</h1>
                     </a>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu diam
-                        amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus
+                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu
+                        diam
+                        amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit.
+                        Sanctus
                         clita duo justo et tempor</p>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
