--- a/clinical-data-services.html
+++ b/clinical-data-services.html
@@ -312,7 +312,7 @@
                             <h6 class="text-white">BioVisualizer</h6>
                             <h6 class="text-white">Blogs</h6>
                         </div>
-                        <h4 class="text-white my-2">Empowering Research: Visualizing miRNA and Large Data with Excelra’s BioVisualizer</h4>
+                        <h4 class="text-white my-2">Empowering Research: Visualizing miRNA and Large Data with XANA’s BioVisualizer</h4>
                     </div>
                 </div>
                 <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
