--- a/newsroom.html
+++ b/newsroom.html
@@ -135,7 +135,7 @@
                     style="max-height: 130px; height: 130px;">
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text">December 13, 2024 <br>
-                        <b class="fs-5">Orogen Therapeutics Partners with Excelra for GOSTAR®</b>
+                        <b class="fs-5">Orogen Therapeutics Partners with XANA for GOSTAR®</b>
                     </p>
 
                 </div>
@@ -146,7 +146,7 @@
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text">March 6, 2024 <br>
                         <b class="fs-5">
-                            Excelra certified for third consecutive year – Great Place To Work</b>
+                            XANA certified for third consecutive year – Great Place To Work</b>
                     </p>
 
                 </div>
@@ -156,7 +156,7 @@
                     ..." style="max-height: 130px; height: 130px;">
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text">April 19, 2023<br>
-                        <b class="fs-5">Excelra acquires BISC Global, creating an international bioinformatics
+                        <b class="fs-5">XANA acquires BISC Global, creating an international bioinformatics
                             powerhouse with an industry-leading platform and service offering</b>
                     </p>
                 </div>
@@ -181,7 +181,7 @@
                     style="max-height: 130px; height: 130px;">
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text">September 21, 2022<br>
-                        <b class="fs-5">Excelra partners with Patcore, Inc
+                        <b class="fs-5">XANA partners with Patcore, Inc
 
                         </b>
                     </p>
@@ -195,7 +195,7 @@
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text">May 25, 2022<br>
                         <b class="fs-5">
-                            Excelra Partners with HotSpot Therapeutics to Enhance Allosteric Drug Discovery Efforts
+                            XANA Partners with HotSpot Therapeutics to Enhance Allosteric Drug Discovery Efforts
                         </b>
                     </p>
                 </div>
@@ -206,7 +206,7 @@
                     style="max-height: 130px; height: 130px;">
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text">April 19, 2022<br>
-                        <b class="fs-5">Excelra Makes Strategic Investment in Anlitiks, a Disruptive HEOR and RWE
+                        <b class="fs-5">XANA Makes Strategic Investment in Anlitiks, a Disruptive HEOR and RWE
                             Technology-led Consulting Company</b>
                     </p>
                 </div>
@@ -218,7 +218,7 @@
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text"> April 4, 2022<br>
                         <b class="fs-5">
-                            Excelra Announces Strategic Investment In ProofPilot, a Leading Software as a Service (SaaS)
+                            XANA Announces Strategic Investment In ProofPilot, a Leading Software as a Service (SaaS)
                             Clinical Trial Research Platform</b>
                     </p>
                 </div>
@@ -231,7 +231,7 @@
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text"> February 9, 2022<br>
                         <b class="fs-5">
-                            X-Chem and Excelra’s GOSTAR® Join Forces to Advance Drug Discovery for Challenging
+                            X-Chem and XANA’s GOSTAR® Join Forces to Advance Drug Discovery for Challenging
                             Targets</b>
                     </p>
                 </div>
@@ -242,7 +242,7 @@
                     style="max-height: 130px; height: 130px;">
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text"> January 19, 2022<br>
-                        <b class="fs-5">XtalPi Partners with Excelra for GOSTAR® to Enhance its Intelligent Digital Drug
+                        <b class="fs-5">XtalPi Partners with XANA for GOSTAR® to Enhance its Intelligent Digital Drug
                             Discovery and Development Platform</b>
                     </p>
                 </div>
@@ -256,7 +256,7 @@
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text"> December 1, 2021<br>
                         <b class="fs-5">
-                            Silexon Partners with Excelra, Deploying GOSTAR® to Strengthen its AI-driven Drug Discovery
+                            Silexon Partners with XANA, Deploying GOSTAR® to Strengthen its AI-driven Drug Discovery
                             and Biopharmaceutical Research Platform</b>
                     </p>
                 </div>
@@ -268,7 +268,7 @@
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text"> October 19, 2021<br>
                         <b class="fs-5">
-                            Excelra Announces Addition of Sudip Nandy to its Board of Directors</b>
+                            XANA Announces Addition of Sudip Nandy to its Board of Directors</b>
                     </p>
                 </div>
             </div>
@@ -279,7 +279,7 @@
                     ..." style="max-height: 130px; height: 130px;">
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text"> August 23, 2021<br>
-                        <b class="fs-5">Excelra launches a re-envisioned version of GOSTAR®</b>
+                        <b class="fs-5">XANA launches a re-envisioned version of GOSTAR®</b>
                     </p>
                 </div>
             </div>
@@ -291,7 +291,7 @@
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text"> October 21, 2020<br>
                         <b class="fs-5">
-                            Cyclica to use Excelra’s GOSTAR® Database to develop AI & ML based Deep Learning Algorithm
+                            Cyclica to use XANA’s GOSTAR® Database to develop AI & ML based Deep Learning Algorithm
                             for Drug Target Identification
                         </b>
                     </p>
@@ -304,7 +304,7 @@
                     style="max-height: 130px; height: 130px;">
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text"> October 14, 2020<br>
-                        <b class="fs-5">Interview with Anandbir Brar, Chief Executive Officer, Excelra | Headline Partner at D4 Global (Virtual Event)
+                        <b class="fs-5">Interview with Anandbir Brar, Chief Executive Officer, XANA | Headline Partner at D4 Global (Virtual Event)
 
                         </b>
                     </p>
@@ -340,7 +340,7 @@
                     style="max-height: 130px; height: 130px;">
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text">September 15, 2020<br>
-                        <b class="fs-5">Standigm Partners with Excelra for GOSTAR® to Enhance its AI-Driven Drug Discovery Process</b>
+                        <b class="fs-5">Standigm Partners with XANA for GOSTAR® to Enhance its AI-Driven Drug Discovery Process</b>
                     </p>
                 </div>
             </div>
@@ -352,7 +352,7 @@
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text"> December 18, 2019<br>
                         <b class="fs-5">
-                            Excelra Collaborates with Keio University on Drug Repurposing to Explore New Therapeutics for a Rare Indication</b>
+                            XANA Collaborates with Keio University on Drug Repurposing to Explore New Therapeutics for a Rare Indication</b>
                     </p>
                 </div>
             </div>
@@ -364,7 +364,7 @@
                 <div class="card-body" style="background-color: rgb(235, 235, 235);">
                     <p class="card-text"> December 18, 2019<br>
                         <b class="fs-5">
-                            Excelra Announces a Drug Repurposing Collaboration with Maruho on Dermatological Applications</b>
+                            XANA Announces a Drug Repurposing Collaboration with Maruho on Dermatological Applications</b>
                     </p>
                 </div>
             </div>
