--- a/papers.html
+++ b/papers.html
@@ -91,7 +91,7 @@
                         Whitepapers
                         
                     </h1>
-                   <!-- <p class="text-white">Stay updated on all the latest events, webinars, and conferences where Excelra will be making waves in life sciences.
+                   <!-- <p class="text-white">Stay updated on all the latest events, webinars, and conferences where XANA will be making waves in life sciences.
                      </p> -->
 
                     <nav aria-label="breadcrumb">
