--- a/publications.html
+++ b/publications.html
@@ -91,7 +91,7 @@
                         Publications
 
                     </h1>
-                    <!-- <p class="text-white">Stay updated on all the latest events, webinars, and conferences where Excelra will be making waves in life sciences.
+                    <!-- <p class="text-white">Stay updated on all the latest events, webinars, and conferences where XANA will be making waves in life sciences.
                      </p> -->
 
                     <nav aria-label="breadcrumb">
@@ -128,7 +128,7 @@
             </div>
             <div class="col-md-3 bg-light mb-4">
                 <h2 class="p-3 fs-3"> Decoding the Proboscis Bat Genome: A Genomic Exploration</a></h2>
-                <p class="fs-5 px-3">Excelra is proud to contribute to the groundbreaking research on the first complete
+                <p class="fs-5 px-3">XANA is proud to contribute to the groundbreaking research on the first complete
                     genome sequence…</p>
                 <div class="mx-3 mb-4">
                     <a href="#" type="btn" class="text-dark" style="border-bottom: 2px solid black;">Read More</a>
