--- a/careers.html
+++ b/careers.html
@@ -123,7 +123,7 @@
         </div>
         <div class="col-md-5 pt-5 mx-5">
             <h1 class="pt-5" style="color: rgb(65, 65, 65);">Maximize your potential</h1>
-            <p class="pt-3">Welcome to Excelra – where we empower innovation in the life sciences, driven by data, science, and digital transformation.</p>
+            <p class="pt-3">Welcome to XANA – where we empower innovation in the life sciences, driven by data, science, and digital transformation.</p>
             <p>We believe in maximizing potential. Not just for data, but for our people, too. We nurture talent, support diversity, and celebrate achievement together.</p>
             <p>You’re looking for an exciting career and an opportunity to make a tangible impact on the world. You’re looking for a company that respects and appreciates your ability and personality.</p>
             <p> We’re looking for the difference makers. We’re looking for you.</p>
@@ -131,6 +131,8 @@
         </div>
        </div>
      </div>
+   
+
 
      <!--Maximize your potential  end-->
 
@@ -141,7 +143,7 @@
         <div class="row img-fluid justify-content-center">
             <div class="col-md-6 mt-lg-5 mb-5">
                 <h1 style="color: rgb(56, 56, 56);">Great Place to Work</h1>
-                <p class="pt-4">We are a Great Place to Work® certified organization. There are many things that make an organization a great place to work, and we’re committed to them all. A healthy, supportive, and nurturing workplace culture is our highest priority at Excelra.</p>
+                <p class="pt-4">We are a Great Place to Work® certified organization. There are many things that make an organization a great place to work, and we’re committed to them all. A healthy, supportive, and nurturing workplace culture is our highest priority at XANA.</p>
                 <p>Our people make every day fulfilling, fruitful and fun.</p>
                 <p>Our guiding principles are:</p>
                 <div class="row pt-4">
@@ -184,11 +186,11 @@
 
     <!--Featured openings end-->
 
-    <!--Why Excelra start-->
+    <!--Why XANA start-->
     
      <div class="container pt-5 mb-5">
         <div class="row mt-lg-3 justify-content-center">
-            <h2 class="text-center" style="color: rgb(59, 59, 59);">Why Excelra</h2>
+            <h2 class="text-center" style="color: rgb(59, 59, 59);">Why XANA</h2>
             <div class="col-md-4 mt-lg-5 pt-5">
                 <h2 class="text-center"><img src="./img/people.png" alt="" class="img-fluid" style="height: 100px; max-height: 100px;"></h2>
                 <h1 class="text-center">50:50</h1>
@@ -207,7 +209,7 @@
         </div>
      </div>
 
-    <!--Why Excelra end -->
+    <!--Why XANA end -->
 
 
     <!--Have fun and make a difference start-->
@@ -250,8 +252,8 @@
             <div class="col-md-12">
            <h2 class="text-center mt-5 fs-1">Join our team</h2>
            <p class="fs-5 text-center mt-3">Would you like to do meaningful and fulfilling work with brilliant minds in a culture that fosters growth and enthusiasm? <br> Then we look forward to hearing from you.</p>
-          <div class="text-center">
-            <button type="button" class="border-1 rounded-pill mb-5" style="height: 50px; width: 170px;">JOIN OUR TEAM</button>
+          <div class="text-center mb-5 mt-5">
+         <a href="mailto:xanabioinformatics@gmail.com" class="text-dark rounded-pill border border-dark btn-lg">JOIN OUR TEAM</a>
           </div>
         </div>
      </div>
