--- a/events.html
+++ b/events.html
@@ -91,7 +91,7 @@
                         Events
                         
                     </h1>
-                   <p class="text-white">Stay updated on all the latest events, webinars, and conferences where Excelra will be making waves in life sciences.
+                   <p class="text-white">Stay updated on all the latest events, webinars, and conferences where XANA will be making waves in life sciences.
                      </p>
 
                     <nav aria-label="breadcrumb">
@@ -125,7 +125,7 @@
    </div>
  <!-- Events end-->
 
- <!--Join Excelra at SapioCon start-->
+ <!--Join XANA at SapioCon start-->
    
  <div class="container mt-lg-5 mb-5">
     <div class="row">
@@ -143,8 +143,8 @@
             </div>
            </div>
            
-           <h4 class="fs-6 mt-5">Join Excelra at SapioCon 2025</h4>
-           <p class="ml-4 mt-4">Meet <b class="text-dark">Excelra’s experts</b> to learn how our informatics solutions enable streamlined operations, enhanced collaboration, and faster decision-making.</p>
+           <h4 class="fs-6 mt-5">Join XANA at SapioCon 2025</h4>
+           <p class="ml-4 mt-4">Meet <b class="text-dark">XANA’s experts</b> to learn how our informatics solutions enable streamlined operations, enhanced collaboration, and faster decision-making.</p>
 
 
         </div>
@@ -156,7 +156,7 @@
     </div>
  </div>
 
- <!--Join Excelra at SapioCon end-->
+ <!--Join XANA at SapioCon end-->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white-50 footer pt-5">
